Updated Sensor Chapter

--- a/Sensors.html
+++ b/Sensors.html
@@ -84,6 +84,13 @@ return false;
 <br>
 <h3>Mechanical</h3>
 <p>Mechanical sensors are used to tell when a robot, or subsystem on a robot, is in contact with something. The most common types of mechanical sensors are bump sensors and limit switches. Mechanical sensors can tell whether the system is at a singular, set distance. Mechanical sensors send a digital signal (1 or 0) to the input pins on a controller to indicate whether the sensor is depressed or not. </p>
+<TABLE ALIGN=CENTER>
+<TR>
+<TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/LimitSwitch.png" HEIGHT="200px" /img></TD>
+<TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/PushButton.png" HEIGHT="200px" /img></TD>
+</TR>
+</TABLE>
+
 <br>
 <h3>Light</h3>
 <p>Light sensors, specifically IR sensors, are used to determine the distance, angle or timing of something. Infrared Sensors have an IR diode that produces light at the focal point of a lens; this produces parallel beams of light moving out of the lens into the surrounding environment. The sensor outputs a voltage that is related to the distance perceived by the sensor. The resultant curve is non-linear and as the object gets closer, the output voltage gets larger. In order to cover a larger area, consider using multiple IR sensors that are angled such that the fields of IR emitted cross each other. Alternatively, consider using a servo to create a sweeping motion and scan the entire area periodically. </p>
