All Pictures Except SONAR

--- a/Sensors.html
+++ b/Sensors.html
@@ -89,11 +89,16 @@ return false;
 <TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/LimitSwitch.png" HEIGHT="200px" /img></TD>
 <TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/PushButton.png" HEIGHT="200px" /img></TD>
 </TR>
+<TR>
+<TD WIDTH=50% ALIGN=CENTER><span class="captionStyle">Vex Limit Switch</span></TD>
+<TD WIDTH=50% ALIGN=CENTER><span class="captionStyle">Vex Push Button</span></TD>
+</TR>
 </TABLE>
-
 <br>
 <h3>Light</h3>
 <p>Light sensors, specifically IR sensors, are used to determine the distance, angle or timing of something. Infrared Sensors have an IR diode that produces light at the focal point of a lens; this produces parallel beams of light moving out of the lens into the surrounding environment. The sensor outputs a voltage that is related to the distance perceived by the sensor. The resultant curve is non-linear and as the object gets closer, the output voltage gets larger. In order to cover a larger area, consider using multiple IR sensors that are angled such that the fields of IR emitted cross each other. Alternatively, consider using a servo to create a sweeping motion and scan the entire area periodically. </p>
+<center><img src="Sensors_Pictures/LineTracker.png" HEIGHT="200px" /img></center><br>
+<center><span class="captionStyle">Vex Line Tracker</span></center>
 <br>
 <h3>SONAR</h3>
 <p>SONAR sensors use sound waves in a way that mimics echolocation. SONAR sensors use a speaker and microphone to project sound into an environment and listen for it to return. SONAR sensors measure the time difference between the emission of the sound and when it comes back to determine distance. SONAR sensors can be used in both air and water. </p>
@@ -101,11 +106,21 @@ return false;
 <h3>Potentiometer</h3>
 <p>Potentiometers are variable resistors that can be used as a sensor. The main type of potentiometer is controlled by a dial that increases or decreases resistance as it is turned. Another common type of potentiometer is controlled by a linear sliding wiper. The term “wiper” refers to the part of the potentiometer that is actually limiting the resistance. While potentiometers are not always used as sensors, they can be useful for determining forces acting on an object or the distance from an object. As the object pushes on the potentiometer and moves the wiper, the output resistance of changes and therefore the voltage affected by that resistance changes. By knowing the range of the potentiometer and the total change in voltage (which would come from calibrating the system), you can tell the amount of force on an object and even how far away the object is.</p>
 <br>
+<TABLE>
+<TR>
+<TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/Potentiometer.png" HEIGHT="200px" /img></TD>
+<TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/GreenPotentiometer.png" HEIGHT="200px" /img></TD> </TR>
+<TR>
+<TD WIDTH=50% ALIGN=CENTER><span class="captionStyle">Vex Potentiometer</span></TD>
+<TD WIDTH=50% ALIGN=CENTER><span class="captionStyle">Standard Potentiometer</TD> </TR>
+</TABLE>
 <h3>Gyro</h3>
 <p>Gyros measure the rate of rotation in a particular axis. Gyros have three main sensing applications. First, they can be used to sense the angular velocity of a component. Second, they can sense the angle that a certain component, subsystem, or entire system is at. Third, they can be used in control systems to sense the orientation or balance of an object and outputting signal to tell the system to correct those things. </p>
 <br>
 <h3>Encoder</h3>
 <p>An encoder can be used to determine position, velocity, or acceleration of a system from a given starting point. Angular or shaft encoders take the angular position of a shaft and convert it to either an analog or a digital code. There are two types of encoders: absolute and incremental. Incremental encoders give the program information about the relative changes in the shaft which can then be worked with to determine other information. Absolute encoders indicate the current position of the shaft and can maintain that position information even when power is removed. Vex encoders are incremental; you can track changes in the angle of the shaft as it moves to determine position. Further, you can compare the changes in position relative to time to find velocity and so on. </p>
+<center><img src="Sensors_Pictures/Encoder.png" HEIGHT="200px" /img></center><br>
+<center><span class="captionStyle">Vex Encoder</span></center>
 <br><br>
 <h2>Interrupt Service Routines</h2>
 <p>Interrupt Service Routines (ISRs) are used to help organize program flow and ensure that input from certain sensors are not overlooked. ISRs will stop all normal program flow when triggered and the program will run the routine or function before going back to what it was doing before. The alternative is to “poll” for results, which really means just continuously checking to see if the sensor has new data. </p>
