--- a/Sensors.html
+++ b/Sensors.html
@@ -86,8 +86,8 @@ return false;
 <p>Mechanical sensors are used to tell when a robot, or subsystem on a robot, is in contact with something. The most common types of mechanical sensors are bump sensors and limit switches. Mechanical sensors can tell whether the system is at a singular, set distance. Mechanical sensors send a digital signal (1 or 0) to the input pins on a controller to indicate whether the sensor is depressed or not. </p>
 <TABLE ALIGN=CENTER>
 <TR>
-<TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/LimitSwitch.png" HEIGHT="200px" /img></TD>
-<TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/PushButton.png" HEIGHT="200px" /img></TD>
+<TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/LimitSwitch.PNG" HEIGHT="200px" /img></TD>
+<TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/PushButton.PNG" HEIGHT="200px" /img></TD>
 </TR>
 <TR>
 <TD WIDTH=50% ALIGN=CENTER><span class="captionStyle">Vex Limit Switch</span></TD>
@@ -97,7 +97,7 @@ return false;
 <br>
 <h3>Light</h3>
 <p>Light sensors, specifically IR sensors, are used to determine the distance, angle or timing of something. Infrared Sensors have an IR diode that produces light at the focal point of a lens; this produces parallel beams of light moving out of the lens into the surrounding environment. The sensor outputs a voltage that is related to the distance perceived by the sensor. The resultant curve is non-linear and as the object gets closer, the output voltage gets larger. In order to cover a larger area, consider using multiple IR sensors that are angled such that the fields of IR emitted cross each other. Alternatively, consider using a servo to create a sweeping motion and scan the entire area periodically. </p>
-<center><img src="Sensors_Pictures/LineTracker.png" HEIGHT="200px" /img></center><br>
+<center><img src="Sensors_Pictures/LineTracker.PNG" HEIGHT="200px" /img></center><br>
 <center><span class="captionStyle">Vex Line Tracker</span></center>
 <br>
 <h3>SONAR</h3>
@@ -108,8 +108,8 @@ return false;
 <br>
 <TABLE>
 <TR>
-<TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/Potentiometer.png" HEIGHT="200px" /img></TD>
-<TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/GreenPotentiometer.png" HEIGHT="200px" /img></TD> </TR>
+<TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/Potentiometer.PNG" HEIGHT="200px" /img></TD>
+<TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/GreenPotentiometer.PNG" HEIGHT="200px" /img></TD> </TR>
 <TR>
 <TD WIDTH=50% ALIGN=CENTER><span class="captionStyle">Vex Potentiometer</span></TD>
 <TD WIDTH=50% ALIGN=CENTER><span class="captionStyle">Standard Potentiometer</TD> </TR>
@@ -119,7 +119,7 @@ return false;
 <br>
 <h3>Encoder</h3>
 <p>An encoder can be used to determine position, velocity, or acceleration of a system from a given starting point. Angular or shaft encoders take the angular position of a shaft and convert it to either an analog or a digital code. There are two types of encoders: absolute and incremental. Incremental encoders give the program information about the relative changes in the shaft which can then be worked with to determine other information. Absolute encoders indicate the current position of the shaft and can maintain that position information even when power is removed. Vex encoders are incremental; you can track changes in the angle of the shaft as it moves to determine position. Further, you can compare the changes in position relative to time to find velocity and so on. </p>
-<center><img src="Sensors_Pictures/Encoder.png" HEIGHT="200px" /img></center><br>
+<center><img src="Sensors_Pictures/Encoder.PNG" HEIGHT="200px" /img></center><br>
 <center><span class="captionStyle">Vex Encoder</span></center>
 <br><br>
 <h2>Interrupt Service Routines</h2>
