--- a/Sensors.html
+++ b/Sensors.html
@@ -106,7 +106,7 @@ return false;
 <h3>Potentiometer</h3>
 <p>Potentiometers are variable resistors that can be used as a sensor. The main type of potentiometer is controlled by a dial that increases or decreases resistance as it is turned. Another common type of potentiometer is controlled by a linear sliding wiper. The term “wiper” refers to the part of the potentiometer that is actually limiting the resistance. While potentiometers are not always used as sensors, they can be useful for determining forces acting on an object or the distance from an object. As the object pushes on the potentiometer and moves the wiper, the output resistance of changes and therefore the voltage affected by that resistance changes. By knowing the range of the potentiometer and the total change in voltage (which would come from calibrating the system), you can tell the amount of force on an object and even how far away the object is.</p>
 <br>
-<TABLE>
+<TABLE ALIGN=CENTER>
 <TR>
 <TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/Potentiometer.PNG" HEIGHT="200px" /img></TD>
 <TD WIDTH=50% ALIGN=CENTER><img src="Sensors_Pictures/GreenPotentiometer.PNG" HEIGHT="200px" /img></TD> </TR>
