--- a/Programming.html
+++ b/Programming.html
@@ -107,8 +107,9 @@ return false;
 </div>
 <div class="col-md-4">&nbsp;</div>
 <div class="col-md-4"> <A HREF="Programming_Popups/DataTypes.html" 
-   onClick="return popup(this, 'Data Types')"><center><img src="Programming_Popups/Programming_Pictures/DataTypes.PNG"  HEIGHT="200px" /img></center></A>
+   onClick="return popup(this, 'Data Types')"><center><img src="Programming_Popups/Programming_Pictures/DataTypes.png"  HEIGHT="200px" /img></center></A>
    <center><span class="captionStyle">Data Types and Sizes</span></center>
+   
 </div>
 </div>
 
