--- a/Programming2.html
+++ b/Programming2.html
@@ -95,7 +95,7 @@ return false;
    onClick="return popup(this, 'Vocab')">char</A>, or character, can hold one byte (or values from 0-255). For this reason, ints are usually used for numbers while chars are usually used for alphanumeric symbols.</p>
 
 <A HREF="Programming_Popups/DataTypes.html" 
-   onClick="return popup(this, 'Data Types')"><center><img src="Programming_Popups/Programming_Pictures/DataTypes.PNG"  HEIGHT="200px" /img></center></A>
+   onClick="return popup(this, 'Data Types')"><center><img src="Programming_Popups/Programming_Pictures/DataTypes.png"  HEIGHT="200px" /img></center></A>
    <center><span class="captionStyle">Data Types and Sizes</span></center>
 
 <br><br>
