--- a/LogicAndLoops2.html
+++ b/LogicAndLoops2.html
@@ -1,4 +1,74 @@
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
 
+	<!--
+	Thanks for looking at our source code! This webpage was developed for the 
+	RBE 1001 E-Textbook IQP in 2014. For questions, contact rbebook@wpi.edu
+	-->
+
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>RBE 1001 E-Book</title>
+
+	<!-- Bootstrap Core CSS -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<!-- Bootrap Theme -->
+	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
+	<!-- CSS for this page -->
+	<link href="css/theme.css" rel="stylesheet">
+
+	<!-- This makes the header and footer appear. Don't edit it -->
+	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+	<script>
+	$(function() {
+		$("#header").load("header.html");
+		$("#footer").load("footer.html");
+	});
+
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56500225-1', 'auto');
+  ga('send', 'pageview');
+
+	</script>
+
+</head>
+
+<body role="document">
+<div id="header"></div>
+
+<br/>
+<div class="container theme-showcase" role="main">
+<!-- CONTENT BEGIN -->
+<div class="jumbotron">
+	<div class="row">
+	<div class="col-md-8">
+		<h1>Programming</h1>
+		<p>Introduction to Programming in C and Arduino</p>
+	</div>
+	</div>
+	<SCRIPT TYPE="text/javascript">
+<!--
+function popup(mylink, windowname)
+{
+if (! window.focus)return true;
+var href;
+if (typeof(mylink) == 'string')
+   href=mylink;
+else
+   href=mylink.href;
+window.open(href, windowname, 'width=500,height=600,scrollbars=yes');
+return false;
+}
+//-->
+</SCRIPT>
+</div>
 <h2>Logic</h2>
 
 <h3> If-Statements</h3>
@@ -105,3 +175,12 @@ if</span> <span class="codeText"> (argument) { </span><br>
    onClick="return popup(this, 'Continue')"><center><img src="Programming_Popups/Programming_Pictures/Continue.PNG" HEIGHT="400px" /img></center></A>
 
    <center><span class="captionStyle">Using Continue in Arduino</span></center>
+   
+   <!-- CONTENT END -->
+</div>
+
+<div class="container"><hr></div>
+
+<div id="footer"></div>
+</body>
+</html>	
