--- a/Circuits.html
+++ b/Circuits.html
@@ -45,6 +45,7 @@
 	</div>
 	</div>
 </div>
+
 <h3>Objectives</h3>
 <p>After this chapter you should be able to:</p>
 <UL>
@@ -71,155 +72,186 @@ return false;
 </SCRIPT>
 
 <h2>Circuits and Circuit Elements</h2>
-<p>A <span class="vocabColor"><A HREF="Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">circuit</A></span> is the interconnection of electrical 
-devices in a circular path. To power the circuit, voltage is generated from a power source and 
-moves through the wires and components. <span class="vocabColor"><A HREF="Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Voltage</A></span> is the total work per unit charge 
-associated with the motion of charge between two points. The rate at which the electrical 
-charge is flowing through a wire or conductor is called <span class="vocabColor"><A HREF="Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">current</A></span>. Both current and voltage are required 
-to achieve electrical power. </p>
 
+<div class="row">
+	<div class="col-md-7">
+	<br>
+	<p>A <span class="vocabColor">circuit</span> is the interconnection of electrical 
+	devices in a circular path. To power the circuit, voltage is generated from a power source and 
+	moves through the wires and components. <span class="vocabColor">Voltage</span> is the total work per unit charge 
+	associated with the motion of charge between two points. The rate at which the electrical 
+	charge is flowing through a wire or conductor is called <span class="vocabColor">current</span>. Both current and voltage are required 
+	to achieve electrical power. </p> </div>
+	<div class="col-md-4">&nbsp;</div>
+	<div class="col-md-4">
 	<center><img src="Circuit_Pictures/Power.png" HEIGHT="150px" /></center>
 	<center><span class="captionStyle">Power Relation to Voltage and Current</span></center>
-	<br>
+	</div>
+</div>
+<br><br>
 	
-<p> Some people have trouble conceptualizing electricity because they cannot see it. Try 
-considering the circuit to instead be a system of pipes. Each pipe is essentially a very large 
-wire. The power source, which is essentially a pump, takes in charge with low voltage and outputs 
-charge with high voltage. Similarly, a pump which takes in water of low pressure and pushes out 
-higher pressure water.  The flow rate of the water moving through the pipe would be the voltage. 
-Water flows from areas of high pressure to low pressure; likewise, electricity flows from areas of 
-high voltage to low voltage. The speed at which water moves through a pipe is the current. The 
-size of the pipe acts as resistance. If the pipe is very large, the resistance is very low and the 
-water can flow freely; if the pipe is small, the water flow is much more restricted. Small 
-resistors are basically large pipes, and large resistors are small pipes. </p>
-<center><img src="Circuit_Pictures/WaterResistance.png" HEIGHT="200px" /></center>
-<center><span class="captionStyle">Resistance Related to Water Pipe Analogy</span></center>
-	
-<p>
-<TABLE>
-   <TR>
-      <TD WIDTH=80% ALIGN=LEFT> <span class="vocabColor"><A HREF="Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Resistance</A></span>, measured in Ohms, of an electrical 
-component is when current opposes, or resists, flowing through that component. The most common 
-electrical component to induce resistance is a <span class="vocabColor"><A HREF="Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Resistor</A></span>. It is important to remember that 
-resistors <b>always</b> dissipate power. Resistors are color coded to show how much they will 
-oppose current. Most resistors have two or three colored bands to denote the resistance 
-followed by either a silver or gold band to denote the tolerance level.</TD>
-   
-      <TD ALIGN=CENTER><img src="Circuit_Pictures/Resistor.png" ALIGN="right" HEIGHT="100px" /></TD>
-   </TR>
-   <TR>
-      <TD WIDTH=80% ALIGN=LEFT> </TD>
-   
-      <TD WIDTH=10%><center><span class="captionStyle">Typical Resistor</span></center></TD>
-   </TR>
-</TABLE>
- </p>
- 
-	<center><img src="Circuit_Pictures/Values.png" HEIGHT="300px" /></center>
-	<center><span class="captionStyle">Reference for Calculating Resistor Values</span></center>
+<div class="row">
+	<div class="col-md-7">
 	<br><br>
+	<p> Some people have trouble conceptualizing electricity because they cannot see it. Try 
+	considering the circuit to instead be a system of pipes. Each pipe is essentially a very large 
+	wire. The power source, which is essentially a pump, takes in charge with low voltage and outputs 
+	charge with high voltage. Similarly, a pump which takes in water of low pressure and pushes out 
+	higher pressure water.  The flow rate of the water moving through the pipe would be the voltage. 
+	Water flows from areas of high pressure to low pressure; likewise, electricity flows from areas of 
+	high voltage to low voltage. The speed at which water moves through a pipe is the current. The 
+	size of the pipe acts as resistance. If the pipe is very large, the resistance is very low and the 
+	water can flow freely; if the pipe is small, the water flow is much more restricted. Small 
+	resistors are basically large pipes, and large resistors are small pipes. </p> </div>
+	<div class="col-md-4">&nbsp;</div>
+	<div class="col-md-4">
+	<center><img src="Circuit_Pictures/WaterResistance.png" HEIGHT="200px" /></center>
+	<center><span class="captionStyle">Resistance Related to Water Pipe Analogy</span></center>
+	</div>
+</div>
+<br><br>
+
+<div class="row">
+	<div class="col-md-7">
+	<br><br>
+	<p><span class="vocabColor">Resistance</span>, measured in Ohms, of an electrical 
+	component is when current opposes, or resists, flowing through that component. The most common 
+	electrical component to induce resistance is a <span class="vocabColor">Resistor</span>. It is important to remember that 
+	resistors <b>always</b> dissipate power. Resistors are color coded to show how much they will 
+	oppose current. Most resistors have two or three colored bands to denote the resistance 
+	followed by either a silver or gold band to denote the tolerance level</p></div>
+	<div class="col-md-4">&nbsp;</div>
+	<div class="col-md-4">
+    <center><img src="Circuit_Pictures/Resistor.png" HEIGHT="100px" /></center>
+	<center><span class="captionStyle">Typical Resistor</span></center></div>
+</div>   
+
+<br><br>
+<center><img src="Circuit_Pictures/Values.png" HEIGHT="300px" /></center>
+<center><span class="captionStyle">Reference for Calculating Resistor Values</span></center>
+<br><br>
+	
 <h3>Ohm's Law</h3>	
-<p>Resistance and current can be used to determine voltage with <span class="vocabColor"><A HREF="Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Ohm's Law</A></span>. Ohm’s law is the most important 
-equation for basic circuitry. </p>
 
+<div class="row">
+	<div class="col-md-7">
+	<p>Resistance and current can be used to determine voltage with <span class="vocabColor">Ohm's Law</span>. Ohm’s law is the most important 
+	equation for basic circuitry. </p> </div>
+	<div class="col-md-4">&nbsp;</div>
+	<div class="col-md-4">
 	<center><img src="Circuit_Pictures/Ohms.png" HEIGHT="150px" /></center>
-	<center><span class="captionStyle">Ohm's Law</span></center>
-	
-<p>That equation can then be substituted into the Power equation from before. </p>
+	<center><span class="captionStyle">Ohm's Law</span></center> </div>
+</div>
 
+<div class="row">
+	<div class="col-md-7">
+	<p>That equation can then be substituted into the Power equation from before. </p></div>
+	<div class="col-md-4">&nbsp;</div>
+	<div class="col-md-4">
 	<center><img src="Circuit_Pictures/Power_Equivalence.png" HEIGHT="60px" /></center>
-	<center><span class="captionStyle">Variations on Power Formula</span></center>
-	
+	<center><span class="captionStyle">Variations on Power Formula</span></center> </div>
+</div>
+
 <p><h3>More Vocab:</h3></p>
-<p><span class="vocabColor"><A HREF="Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Node</A></span>: A point in a circuit where two or more 
+<p><span class="vocabColor">Node</span>: A point in a circuit where two or more 
 components are connected </p>
-<p><span class="vocabColor"><A HREF="Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Loop</A></span>: An ordered sequence of nodes forming a 
+<p><span class="vocabColor">Loop</span>: An ordered sequence of nodes forming a 
 closed path </p>
 
 <p><h2>Parallel and Series Resistors</h2></p>
+<br><br>
 
-<p>Solving a circuit requires simplifying by combining similar elements. In order to for a circuit 
-with multiple resistors to be solved, the resistors must first be simplified into one total, 
-equivalent resistance. The first step to simplifying resistance is determining whether the 
-resistors are in series or parallel. </p>
-	
-<p>Two elements are in <span class="vocabColor"><A HREF="Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">series</A></span> if they share a node with no other 
-elements connected at the node. Resistors in series add together to get an equivalent 
-resistance. In the figure below, resistors A and B are in series. Two elements are in <span 
-class="vocabColor"><A HREF="Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">parallel</A></span> if they form a loop with no other 
-elements in the loop. Resistors in parallel combine by adding the reciprocal sum of each value. 
-In the figure below, resistors C and D are in parallel. </p>
-
-<center><img src="Circuit_Pictures/Parallel_Series.png" HEIGHT="100px" /></center>
-<center><span class="captionStyle">Equations for Reducing Parallel and Series Resistors
-</span></center>
-
+<div class="row">
+	<div class="col-md-7">
+	<p>Solving a circuit requires simplifying by combining similar elements. In order to for a circuit 
+	with multiple resistors to be solved, the resistors must first be simplified into one total, 
+	equivalent resistance. The first step to simplifying resistance is determining whether the 
+	resistors are in series or parallel. </p>
+	<br>
+	<p>Two elements are in <span class="vocabColor">series</span> if they share a node with no other 
+	elements connected at the node. Resistors in series add together to get an equivalent 
+	resistance. In the figure below, resistors A and B are in series. Two elements are in <span 
+	class="vocabColor">parallel</span> if they form a loop with no other 
+	elements in the loop. Resistors in parallel combine by adding the reciprocal sum of each value. 
+	In the figure below, resistors C and D are in parallel. </p> </div>
+	<div class="col-md-4">&nbsp;</div>
+	<div class="col-md-4">
+	<center><img src="Circuit_Pictures/Parallel_Series.png" HEIGHT="100px" /></center>
+	<center><span class="captionStyle">Equations for Reducing Parallel and Series Resistors</span></center> </div>
+</div>
 
 
 <h3>Here's an example:</h3>
-
-<TABLE ALIGN = CENTER>
-   <TR>
-      <TD WIDTH=50% ALIGN=CENTER><A HREF="ResistanceExample.html" 
-   onClick="return popup(this, 'Resistance Example')"><img src=
-"Circuit_Pictures/Example_Circuit.png"  HEIGHT="200px" /></A></TD>
-      <TD WIDTH=50% ALIGN=CENTER><img src="Circuit_Pictures/Example_Values.png"  HEIGHT="150px" />
-</TD>
-   </TR>
-</TABLE>
 <br>
-<p><center>Try to reduce the circuit above. Click on the circuit for the solution.</center></p>
+<div class="row">
+	<div class="col-md-6">
+	<img src="Circuit_Pictures/Example_Circuit.png"  HEIGHT="200px" /> </div>
+	<div class="col-md-6">
+    <img src="Circuit_Pictures/Example_Values.png"  HEIGHT="150px" /> </div>
+</div>
+<br>
+<p>Try to reduce the circuit above. Click on the circuit for the solution.</p>
 <br><br>
 
 <h2>Explanation of Series and Parallel</h2>
-<p>Why do series resistors simply add together while parallel ones are so much more different? The 
-reasoning lies in how the current moves through the circuit. When resistors are in series current 
-is able to flow through all of the resistors in a single loop. So the equivalent resistance of 
-series resistors has to be larger than the largest resistor in the circuit. However when resistors 
-are in parallel the current has to split between the loops created by the parallel resistors. This 
-means that the equivalent resistance will always be smaller than the smallest resistor in the 
-loop. It is important to note that when current flows through a loop of parallel resistors, it 
-splits in a way that is proportional to the resistance of the resistors; higher resistors will 
-have less current flowing through them and vice versa to ensure that there is the same amount of 
-voltage going through the entire circuit. </p>
+<div class="row">
+	<div class="col-md-7">
+	<p>Why do series resistors simply add together while parallel ones are so much more different? The 
+	reasoning lies in how the current moves through the circuit. When resistors are in series current 
+	is able to flow through all of the resistors in a single loop. So the equivalent resistance of 
+	series resistors has to be larger than the largest resistor in the circuit. However when resistors 
+	are in parallel the current has to split between the loops created by the parallel resistors. This 
+	means that the equivalent resistance will always be smaller than the smallest resistor in the 
+	loop. It is important to note that when current flows through a loop of parallel resistors, it 
+	splits in a way that is proportional to the resistance of the resistors; higher resistors will 
+	have less current flowing through them and vice versa to ensure that there is the same amount of 
+	voltage going through the entire circuit. </p></div>
+</div>
+<br><br>
 
 <p><h2>Kirchoff's Voltage and Current Laws</h2></p>
-<p><span class="vocabColor"><A HREF="Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Kirchoff's Voltage Law(KVL)</A></span> says that the 
-algebraic sum of the voltages around a loop is zero. To solve a circuit with KVL sum all the 
-voltages, paying attention to the polarity of the voltage sources. </p>
-   <TABLE>
-   <TR>
-   <TD WIDTH=50%><img src="Circuit_Pictures/KVL.png"  HEIGHT="75px" /img></TD>
-   <TD WIDTH=50%><img src="Circuit_Pictures/Voltages.png" HEIGHT="200px" /img></TD>
-   </TR>
-   </TABLE>
-<br><br>
-<p><span class="vocabColor"><A HREF="Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Kirchoff's Current Law(KCL)</A></span> says that the 
-algebraic sum of all the currents entering a node is zero. To solve a circuit with KCL, the sum 
-of all the currents leaving a node should be subtracted from all currents entering that same 
-node with any unknown values left as variables.</p>
-<TABLE>
-<TR>
-	<TD ALIGN=50%><img src="Circuit_Pictures/KCL.png" HEIGHT="100px" /img></TD>
-	<TD ALIGN=50%><img src="Circuit_Pictures/Currents.png" HEIGHT="200px" /img></TD>
-</TR>
-</TABLE>
 <br>
-<p>In the drawing above, the two nodes can essentially be considered one node. This is
-because there are no electrical components between them. Remember that changing the sign of the current will change the direction in which it is travelling. </p>
+<div class="row">
+	<div class="col-md-6">
+	<p><span class="vocabColor">Kirchoff's Voltage Law(KVL)</span> says that the 
+	algebraic sum of the voltages around a loop is zero. To solve a circuit with KVL sum all the 
+	voltages, paying attention to the polarity of the voltage sources. </p> </div>
+	<div class="col-md-2">
+	<img src="Circuit_Pictures/KVL.png"  HEIGHT="50px" /img></div>
+	<div class="col-md-3">
+	<img src="Circuit_Pictures/Voltages.png" HEIGHT="150px" /img></div>
+</div>
+<br><br>
 
+<div class="row">
+	<div class="col-md-6">
+	<p><span class="vocabColor">Kirchoff's Current Law(KCL)</span> says that the 
+	algebraic sum of all the currents entering a node is zero. To solve a circuit with KCL, the sum 
+	of all the currents leaving a node should be subtracted from all currents entering that same 
+	node with any unknown values left as variables.</p>
+	<br>
+	<p>In the drawing to the right, the two nodes can essentially be considered one node. This is
+	because there are no electrical components between them. Remember that changing the sign of the current will change the direction in which it is travelling. </p>	</div>
+	<div class="col-md-2">
+	<img src="Circuit_Pictures/KCL.png" HEIGHT="60px" /img></div>
+	<div class="col-md-4">
+	<img src="Circuit_Pictures/Currents.png" HEIGHT="150px" /img></div>
+</div>
+<br><br>
+
+<h3>Section Vocab</h3>
+<p>Circuit: The interconnection of electrical devices in a circular path</p>
+<p>Voltage: Total work per unit charge associated with the motion of charge between two points. Measured in Volts(V)</p>
+<p>Current: The rate at which the electrical charge is flowing through a wire or conductor. Measured in Amps (A)</p>
+<p>Resistance: Opposes, or resists, current flowing through that component</p>
+<p>Resistor: Electrical element to induce resistance</p>
+<p>Ohm's Law: Voltage = Current*Resistance (V=IR)</p>
+<p>Node: A point in a circuit where two or more components are connected</p>
+<p>Loop: An ordered sequence of nodes forming a closed path</p>
+<p>Series: Elements that share a node with no other elements connected at the node</p>
+<p>Parallel: Elements that form a loop with no other elements in the loop</p>
+<p>Kirchoff's Voltage Law: The algebraic sum of the voltages around a loop is zero</p>
+<p>Kirchoff's Current Law: The algebraic sum of all the currents entering a node is zero</p>
 <!-- CONTENT END -->
 </div>
 
