--- a/Programming.html
+++ b/Programming.html
@@ -322,6 +322,43 @@ if</span> <span class="codeText"> (argument) { </span><br>
 	<center><span class="captionStyle">Using Continue in Arduino</span></center>
 	</div>
 </div>
+<h2>Concept Questions</h2>
+<form>
+	<label for="Float">Which data type can represent the number 12.5?</label>
+	<br/><input type="radio" id="direction" value="Int"> Int 
+	<br/><input type="radio" id="direction" value="Float"> Float
+	<br/><input type="radio" id="direction" value="Char"> Char
+	
+	<br/>
+	<label for="Long">Which data type can represent the number 10,000?</label>
+	<br/><input type="radio" id="direction" value="Int"> Int 
+	<br/><input type="radio" id="direction" value="Float"> Float
+	<br/><input type="radio" id="direction" value="Char"> Char
+	
+	<br/>
+	<label for="Long">Which data type can represent the number 10,000?</label>
+	<br/><input type="radio" id="direction" value="Int"> Int 
+	<br/><input type="radio" id="direction" value="Float"> Float
+	<br/><input type="radio" id="direction" value="Char"> Char
+	
+	<br/>
+	<label for="Long">Recall the <A HREF="Programming_Popups/WhileExample.html" 
+   onClick="return popup(this, 'While-Loop Example')">while-loop example</A> from earlier.
+	After how many iterations will the program re-enter the if-statement?</label>
+	<br/><input type="radio" id="direction" value="Six"> 6
+	<br/><input type="radio" id="direction" value="ThirtyThousand"> 32,767
+	<br/><input type="radio" id="direction" value="Ten"> 10
+	
+	<br/>
+	<label for="Long">Suppose you need a program to run the same exact lines of code ten times.
+	Which of the following would be the most efficient to accomplish this task?</label>
+	<br/><input type="radio" id="direction" value="For"> For-Loop
+	<br/><input type="radio" id="direction" value="If"> If-Statement
+	<br/><input type="radio" id="direction" value="While"> While-Loop
+</form>
+
+
+
 <br><br><br>
 <h3>Section Vocab</h3>
 <p>Variables - locations in memory for storing values and can change over time</p>
