Just kidding - better question

--- a/Sensors.html
+++ b/Sensors.html
@@ -145,7 +145,7 @@ return false;
 	<br/>
 	<label for="Long">Which of the following would be the best time to use an Interrupt Service Routine?</label>
 	<br/><input type="radio" id="direction" value="ISR"> Robot needs to autonomously drive forward but also needs to constantly check a line tracker. Robot must stop as soon as the line tracker sees a line.
-	<br/><input type="radio" id="direction" value="Sequential"> Robot needs to drive forward and can only move arm once it has stopped
+	<br/><input type="radio" id="direction" value="Sequential"> Robot needs to drive forward and move an arm once it gets to a loading zone.
 	<br/><input type="radio" id="direction" value="Square"> Robot needs to drive straight for one foot, then turn left, then repeat three more times to make a square.
 </form>
 <!-- CONTENT END -->
