All the Radio Buttons

--- a/Circuits.html
+++ b/Circuits.html
@@ -239,6 +239,25 @@ closed path </p>
 </div>
 <br><br>
 
+<h2>Concept Questions</h2>
+<form>
+	<label for="Series">For which configuration of resistors would you add resistors to get equivalent resistance?</label>
+	<br/><input type="radio" id="direction" value="Parallel"> Parallel
+	<br/><input type="radio" id="direction" value="Series"> Series
+	
+	<br/>
+	<label for="Equations">Which of the following is true?</label>
+	<br/><input type="radio" id="direction" value="Power"> P = V/I
+	<br/><input type="radio" id="direction" value="Voltage"> V = P*I
+	<br/><input type="radio" id="direction" value="Current"> I = V/R
+	
+	<br/>
+	<label for="Parallel">What would be the equivalent resistance of three 330 Ohm resistors in parallel?</label>
+	<br/><input type="radio" id="direction" value="NineNinety"> 990 Ohms
+	<br/><input type="radio" id="direction" value="Sixty"> 60 Ohms
+	<br/><input type="radio" id="direction" value="OneTen"> 110 Ohms
+</form>
+
 <h3>Section Vocab</h3>
 <p>Circuit: The interconnection of electrical devices in a circular path</p>
 <p>Voltage: Total work per unit charge associated with the motion of charge between two points. Measured in Volts(V)</p>
