--- a/Programming.html
+++ b/Programming.html
@@ -336,13 +336,7 @@ if</span> <span class="codeText"> (argument) { </span><br>
 	<br/><input type="radio" id="direction" value="Char"> Char
 	
 	<br/>
-	<label for="Long">Which data type can represent the number 10,000?</label>
-	<br/><input type="radio" id="direction" value="Int"> Int 
-	<br/><input type="radio" id="direction" value="Float"> Float
-	<br/><input type="radio" id="direction" value="Char"> Char
-	
-	<br/>
-	<label for="Long">Recall the <A HREF="Programming_Popups/WhileExample.html" 
+	<label for="Iterations">Recall the <A HREF="Programming_Popups/WhileExample.html" 
    onClick="return popup(this, 'While-Loop Example')">while-loop example</A> from earlier.
 	After how many iterations will the program re-enter the if-statement?</label>
 	<br/><input type="radio" id="direction" value="Six"> 6
@@ -350,7 +344,7 @@ if</span> <span class="codeText"> (argument) { </span><br>
 	<br/><input type="radio" id="direction" value="Ten"> 10
 	
 	<br/>
-	<label for="Long">Suppose you need a program to run the same exact lines of code ten times.
+	<label for="ForLoop">Suppose you need a program to run the same exact lines of code ten times.
 	Which of the following would be the most efficient to accomplish this task?</label>
 	<br/><input type="radio" id="direction" value="For"> For-Loop
 	<br/><input type="radio" id="direction" value="If"> If-Statement
